--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,8 @@
 	s = status -s
 	df = diff --color --color-words --abbrev
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
+	cb = checkout -b
+	please = push --force-with-lease
 [color]
 	ui = always
 [core]
