--- a/.gitconfig
+++ b/.gitconfig
@@ -44,3 +44,7 @@
 # http://rentzsch.tumblr.com/post/564806957/public-but-hackable-git-submodules
 [url "git@github.com:danielwestendorf/"]
   insteadOf = "git://github.com/danielwestendorf/"
+
+[user]
+	name = Daniel Westendorf
+	email = daniel@prowestech.com
